# PDF_auto_maker

./: .gitignore  README.md  docker-compose.yml  최종기획서_뚝딱.hwpx
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: routes.py
backend/app/eval/: __init__.py  harness.py  metrics.py  netguard.py
backend/app/generation/: __init__.py  generator.py  llm.py  prompts.py
backend/app/injection/: __init__.py  injector.py
backend/app/parsing/: __init__.py  flat_parser.py  parser.py
backend/app/rag/: __init__.py  embeddings.py  pipeline.py  preprocess.py
backend/app/schemas/: __init__.py  api.py  form.py  generation.py  rag.py
backend/app/services/: __init__.py  orchestrator.py  store.py
backend/eval/: README.md
backend/eval/datasets/: business_plan.json  quote_basic.json  standard_quote.json
backend/scripts/: extract_lecture_docs.py  extract_plan.py  index_knowledge.py  make_business_plan.py  make_flat_plan.py  make_flat_quote.py  make_project_plan.py  make_sample_form.py  make_screenshots.py  make_standard_quote.py  make_table_form.py  run_eval.py  try_generate.py  try_inject.py
backend/tests/: conftest.py  test_eval.py  test_flat.py  test_generation.py  test_injection.py  test_parser.py  test_rag.py  test_smoke.py  test_standard_quote.py
docs/: erd.txt  데이터베이스요구사항분석서.md  발표대본.md  발표정리.md  빅데이터분석정의서.md  시스템구성도.md  요구사항정의서.md  월요일_교체가이드.md  유스케이스.md  테이블명세서.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  (+2 more)
(+11 files in other folders)
