[project]
name = "tooktak-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.2",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "pdfplumber>=0.11.10",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.3",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "reportlab>=5.0.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
